--- a/css/scss/components/_pay-online.scss
+++ b/css/scss/components/_pay-online.scss
@@ -5,7 +5,7 @@ Pay Online Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.pay-online-banner {
-    padding: 60px;
+    padding: 40px 0;
     background-image: linear-gradient(
         180deg,
         rgba(6, 6, 6, 0.5),
