--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -17,6 +17,7 @@ Home Page CSS Start
   display: flex;
   align-items: center;
   .container {
+    position: relative;
     .banner-content {
       margin: 0 auto;
       max-width: 1400px;
@@ -27,12 +28,23 @@ Home Page CSS Start
       color: white;
     }
     p {
-      margin-top: 20px;
-      font-size: 20px;
+      font-size: 16px;
       color: white !important;
     }
     .cta-btn {
       margin-top: 20px;
+    }
+
+    .affiliate {
+      position: absolute;
+      top: -60px;
+      right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      &.other {
+        top: -20px;
+      }
     }
   }
 }
@@ -89,7 +101,7 @@ Home Page CSS Start
       .map-content {
         position: relative;
         z-index: 9;
-        padding: 80px 40px;
+        padding: 40px;
         background-color: white;
         border-radius: 12px;
         box-shadow: 0px 20px 20px 0px rgba(164, 164, 164, 0.25);
@@ -114,7 +126,7 @@ Home Page CSS End
     .storage-unit {
       .map-wrapper {
         .map-content {
-          padding: 50px 30px;
+          padding: 30px;
         }
       }
     }
@@ -128,7 +140,14 @@ Home Page CSS End
     padding: 60px 0;
     .container {
       p {
-        font-size: 20px;
+        font-size: 14px;
+      }
+
+      .affiliate {
+        top: -40px;
+        &.other {
+          top: -40px;
+        }
       }
     }
   }
@@ -181,10 +200,13 @@ Home Page CSS End
     .container {
       p {
         margin-top: 5px;
-        font-size: 18px;
+        font-size: 14px;
       }
       .cta-btn {
         margin-top: 30px;
+      }
+      .affiliate {
+        display: none;
       }
     }
   }
@@ -196,9 +218,6 @@ Home Page CSS End
   .banner-section {
     .container {
       min-height: unset;
-      p {
-        font-size: 14px;
-      }
     }
   }
   //Banner Section CSS End
