--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -215,7 +215,7 @@ header {
 
   .affiliate {
     margin-top: 50px;
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: start;
     p {
