--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -109,6 +109,8 @@ header {
 //Small Device CSS start
 @media (min-width: 0px) and (max-width: 768px) {
   header {
+    padding: 10px 0;
+    height: 80px;
     a {
       &.logo {
         height: unset;
@@ -141,7 +143,7 @@ header {
             text-align: left;
             width: 0;
             height: 100vh;
-            top: 100px;
+            top: 78px;
             left: -500px;
             opacity: 0;
             display: none;
@@ -171,14 +173,14 @@ header {
 
                 i {
                   margin-right: 10px;
-                  padding: 20px 10px;
+                  padding: 12px 10px;
                   vertical-align: middle;
                   font-size: 20px;
                   line-height: 27px;
-                  border-radius: 50px;
+                  border-radius: 25px;
                 }
                 span {
-                  padding: 15px 30px;
+                  padding: 8px 25px;
                   line-height: 34px;
                   display: inline-block;
                   width: 90%;
@@ -214,7 +216,7 @@ header {
   }
 
   .affiliate {
-    margin-top: 50px;
+    margin-top: 20px;
     display: block;
     align-items: center;
     justify-content: start;
@@ -247,20 +249,20 @@ header {
       &.navigation-menu {
         ul {
           &#toggleMenuItem {
-            padding: 30px 15px;
+            padding: 15px 15px;
             li {
               margin: 10px 0;
               a {
                 font-size: 16px;
                 i {
                   margin-right: 7px;
-                  padding: 20px 10px;
+                  padding: 10px 10px;
                   font-size: 16px;
-                  line-height: 24px;
+                  line-height: 30px;
                   border-radius: 30px;
                 }
                 span {
-                  padding: 12px 20px;
+                  padding: 7px 20px;
                   line-height: 39px;
                   display: inline-block;
                   width: 90%;
